apps/app1/deploymet.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-app1
  namespace: sample-app1
spec:
  replicas: 1

  selector:
    matchLabels:
      app: sample-app1

  template:
    metadata:
      labels:
        app: sample-app1

    spec:
      containers:
        - name: nginx
          image: nginx:alpine

          ports:
            - containerPort: 80

          command:
            - /bin/sh
            - -c

          args:
            - |
              [...]
