apps/app1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-app1
  namespace: sample-app1
spec:
  selector:
    app: sample-app1

  ports:
    - name: http
      port: 80
      targetPort: 80
